Add codemeniac image

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello world
+<html>
+  <head>
+    <title>CodeMeniac</title>
+  </head>
+  <body>
+    <img src="https://s3.amazonaws.com/logos.brandpa.com/uploads/0bbc9680600c1c6cdc05594498616346/codemaniac.png" width="100%" />
+  </body>
+</html>
